ADB Explorer - Version History
==============================

Version 1.4.0 - 2025-11-27
---------------------------
- Redesigned device selection with tab-based interface:
  * Replaced top toolbar with device tabs for quick switching between connected devices
  * Each connected device now appears as a separate tab
  * Removed "Refresh Devices" button (devices refresh automatically on connect/disconnect)
  * Removed redundant "Connected:" status text
- Moved "New Window" button to navigation toolbar:
  * Now displayed as icon-only (📂) to save space
  * Located between the sync button and favorites dropdown
- Updated folder icons to yellow color:
  * Folder icons now use Windows 11-style yellow color (#E8A317)
  * Applied to both the folder tree (left panel) and file list (right panel)

Version 1.3.3 - 2025-11-16
---------------------------
- Added context menu options for copying file/folder information:
  * "Copy file name" - Copies just the name of the selected file(s) or folder(s) to clipboard
  * "Copy full path" - Copies the complete path of the selected file(s) or folder(s) to clipboard
  * Both options support multiple selections (joined with newlines)
  * Menu items appear after the Delete option with a separator

Version 1.3.2 - 2025-11-16
---------------------------
- Added column header sorting with smart alphabetical order:
  * Click on Name, Size, Modified, Type, or Permissions headers to sort
  * Smart natural sorting for names (e.g., file2 comes before file10)
  * Size column sorts by actual byte values, not alphabetically
  * Modified column sorts by actual date/time, not alphabetically
  * First click sorts ascending, second click sorts descending
  * Directories always appear before files regardless of sorting
- Added new Type column showing file extensions:
  * Displays file extensions without the dot (e.g., "txt", "jpg", "pdf")
  * Empty for directories
  * Supports stable sorting - maintains previous sort order within type groups